 * Fix chat input key being sometimes registered twice
 * Fix not displaying current volume status after pressing mute key
 * Fix many effects not being correctly recorded by the video recorder
 * Fix quit menu showing incorrect keys if using non-default key bindings

Frontend:
 + Schemes are now stored in separate files under Schemes
 * Fix broken preview of team hats (e.g. cap_team)

Content:
 + New scenarios: Bazooka Battlefield, Tentacle Terror
 + New basic training mission: Movement
 + Completely redo basic training missions: Bazooka, Grenade, Rope
 + Major overhaul of Sudden Death visuals in most themes
 + New flag: uk_scotland
 + New voice: Default_pl (Polish)

Styles and game modes:
 + Various styles: Add current score/time next to team bars (where applicable)
 + Construction Mode: Add a few shortcuts
 + Construction Mode: Show selected object at cursor and a crate preview icon
 + Construction Mode: Remember all selections
 + Construction Mode: Add subtle glow to healing station
 + Construction Mode: Allow to change "Switch Hedgehog" in weapon scheme
 + Construction Mode: Hide selected sub-modes from crate/object placer from enemies over the net
 + Continental supplies: Custom weapon icons for the special weapons
 + Racer, Tech Racer: Beforee starting a round, make first waypoint flash and center camera to it
 + Racer: Use dark waypoints in bright themes like Bath
 + Racer, Tech Racer: Various other waypoint appearance improvements
 + Battalion: Minor message and visual improvements
 + Battalion: Mutate hog hats by default, but not the names
 + Battalion: Script parameter “mutatenames=true” to also change the hog names (default: false)
 + Battalion (King Mode): Kings always wear crowns and non-kings don't, regardless of settings
 + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
 + Space Invasion: Add a default Space Invasion game scheme
 + HedgeEditor: Show cursor coordinates in top left corner